.kustomize/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-api-doc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: open-api-doc.dev-waiverforeverk8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-api-doc
            port:
              number: 80
